--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -28,7 +28,6 @@ jobs:
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
-
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
@@ -37,3 +36,9 @@ jobs:
 
     # - name: Run test suite
     #   run: composer run-script test
+    
+    - name: Install phpMyAdmin
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y phpmyadmin
+        sudo ln -s /usr/share/phpmyadmin /var/www/html/phpmyadmin
